card overflow fixed

--- a/client/src/components/mypapers/mypapers.css
+++ b/client/src/components/mypapers/mypapers.css
@@ -12,6 +12,7 @@
 
 .mypapers_papers {
   display: grid;
+  grid-template-columns: repeat(auto-fit, 300px);
   gap: 25px;
   margin-top: 20px;
   width: 100%;
@@ -23,6 +24,9 @@
   }
   .explore_papers {
     grid-template-columns: repeat(auto-fit, 100%);
+  }
+  .mypapers_papers {
+    grid-template-columns: auto;
   }
 }
 @media screen and (max-width: 764px) {
